sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
var lg = getNombreValeurs()
var ecart = getNombreValeurs()

do {	if (ecart > 1) {ecart = (ecart.toDouble / 1.3).toInt}
	var i = 0
	var ech = true
		while (i + ecart < lg)
		{	if (plusPetit(i+ecart,i)) {echange(i+ecart,i); ech = false}
			i = i+1
			}	
	}
while (ecart > 1 || ech)

}
